--- a/python/notebook.ipynb
+++ b/python/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def check_xsl_paths(*xsls: Path) -> bool:\n",
+    "\n",
+    "    for xsl_Path in xsls:\n",
+    "        try:\n",
+    "            # check xsl paths are valid\n",
+    "            xsl_Path = xsl_Path.resolve(strict=True)\n",
+    "\n",
+    "        except FileNotFoundError as e:\n",
+    "            err_txt = (\n",
+    "                \"The following required XSLT file is missing:\"\n",
+    "                f\"\\n\\n{xsl_Path}\"\n",
+    "                \"\\n\\nUsually you should have two XSL files in a folder called 'XSLT'\"\n",
+    "                \" and that folder should be in the same folder as this program.\"\n",
+    "            )\n",
+    "            print(\"Error:\", err_txt)\n",
+    "            if USE_GUI:\n",
+    "                # this can be caught in the GUI code and the\n",
+    "                # Error message displayed in a GUI window\n",
+    "                raise Exception(err_txt) from e\n",
+    "            return False\n",
+    "\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_date(input_Path: Path) -> str:\n",
+    "    \"\"\"Extract date form input XML from SharePoint\"\"\"\n",
+    "\n",
+    "    with open(input_Path) as f:\n",
+    "        input_xml_str = f.read()\n",
+    "\n",
+    "    # print(f'input_xml_str length is: {len(input_xml_str)}')\n",
+    "    # get the updated date\n",
+    "    match = re.search(r\"(<updated>)([A-Z0-9:+-]+)(</updated>)\", input_xml_str)\n",
+    "    date_str = \"\"\n",
+    "    if match:\n",
+    "        date_str = match.group(2)\n",
+    "        print(f\"Date extracted from input xml (from SharePoint) {date_str}\")\n",
+    "\n",
+    "    try:\n",
+    "        dt = datetime.strptime(date_str[:19], \"%Y-%m-%dT%H:%M:%S\")\n",
+    "        formated_date = dt.strftime(\"%Y-%m-%d__%H-%M\")\n",
+    "    except Exception as e:\n",
+    "        print(repr(e))\n",
+    "        formated_date = \"\"\n",
+    "\n",
+    "    return formated_date\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_Path=PosixPath('/Users/mark/projects/added-names/_Reports/2023-05-18/Dashboard_Data/2023-05-17__16-22_input_from_SP.xml')\n",
+      "xsl_1_Path=PosixPath('/Users/mark/projects/added-names/XSLT/added-names-spo-rest.xsl')\n",
+      "xsl_2_Path=PosixPath('/Users/mark/projects/added-names/XSLT/post-processing-html.xsl')\n",
+      "parameter=None\n",
+      "Date extracted from input xml (from SharePoint) 2023-05-17T16:22:51Z\n",
+      "intermidiate_Path=PosixPath('/Users/mark/projects/added-names/_Reports/2023-05-17/Dashboard_Data/2023-05-17__16-22_intermediate.xml')\n",
+      "out_html_Path=PosixPath('/Users/mark/projects/added-names/_Reports/2023-05-17/Added_Names_Report.html')\n",
+      "Created: /Users/mark/projects/added-names/_Reports/2023-05-17/Added_Names_Report.html\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run_xslts():\n",
+    "    xsl_1_Path = XSL_1_PATH\n",
+    "    xsl_2_Path = XSL_2_PATH\n",
+    "    input_Path = Path(\"/Users/mark/projects/added-names/_Reports/2023-05-18/Dashboard_Data/2023-05-17__16-22_input_from_SP.xml\")\n",
+    "    parameter = None\n",
+    "\n",
+    "    print(f\"{input_Path=}\")\n",
+    "    print(f\"{xsl_1_Path=}\")\n",
+    "    print(f\"{xsl_2_Path=}\")\n",
+    "    print(f\"{parameter=}\")\n",
+    "\n",
+    "    xsls_exist = check_xsl_paths(xsl_1_Path, xsl_1_Path)\n",
+    "    if not xsls_exist:\n",
+    "        return\n",
+    "\n",
+    "    formated_date = extract_date(input_Path)\n",
+    "\n",
+    "    intermediate_file_name = f\"{formated_date}_intermediate.xml\"\n",
+    "    input_file_resave_name = f\"{formated_date}_input_from_SP.xml\"\n",
+    "    output_file_name = f\"Added_Names_Report.html\"\n",
+    "\n",
+    "    if WORKING_FOLDER is None:\n",
+    "        dated_folder_Path = REPORTS_FOLDER.joinpath(formated_date).resolve()\n",
+    "    else:\n",
+    "        dated_folder_Path = WORKING_FOLDER.resolve()  # working folder selected in UI\n",
+    "    dated_folder_Path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    xml_folder_Path = dated_folder_Path.joinpath(DASHBOARD_DATA_FOLDER)\n",
+    "    xml_folder_Path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    intermidiate_Path = xml_folder_Path.joinpath(intermediate_file_name)\n",
+    "    out_html_Path = dated_folder_Path.joinpath(output_file_name)\n",
+    "\n",
+    "    print(f\"{intermidiate_Path=}\")\n",
+    "    print(f\"{out_html_Path=}\")\n",
+    "\n",
+    "    # resave the input file\n",
+    "    resave_Path = xml_folder_Path.joinpath(input_file_resave_name)\n",
+    "    with open(resave_Path, \"w\") as f:\n",
+    "        f.write(input_Path.read_text())\n",
+    "\n",
+    "    with saxonche.PySaxonProcessor(license=False) as proc:\n",
+    "\n",
+    "        # print(proc.version)\n",
+    "\n",
+    "        # need to be as uri in case there are spaces in the path\n",
+    "        input_path = input_Path.as_uri()\n",
+    "        intermidiate_path = intermidiate_Path.as_uri()\n",
+    "        outfilepath = out_html_Path.as_uri()\n",
+    "\n",
+    "        # --- 1st XSLT ---\n",
+    "        xsltproc = proc.new_xslt30_processor()\n",
+    "\n",
+    "        executable = xsltproc.compile_stylesheet(stylesheet_file=str(xsl_1_Path))\n",
+    "        executable.transform_to_file(\n",
+    "            source_file=input_path, output_file=intermidiate_path\n",
+    "        )\n",
+    "\n",
+    "        # --- 2nd XSLT ---\n",
+    "        xsltproc2 = proc.new_xslt30_processor()\n",
+    "\n",
+    "        executable2 = xsltproc2.compile_stylesheet(stylesheet_file=str(xsl_2_Path))\n",
+    "\n",
+    "        if parameter:\n",
+    "            # get path to folder containing LM/FM XML file(s) and pass this to\n",
+    "            # the XSLT processor as a parameter. This is for marshelling.\n",
+    "            remove_docstring(parameter)\n",
+    "            parameter_str = parameter.as_uri()  # uri works best with Saxon\n",
+    "            param = proc.make_string_value(parameter_str)\n",
+    "\n",
+    "            executable2.set_parameter(XSLT_MARSHAL_PARAM_NAME, param)\n",
+    "\n",
+    "        executable2.transform_to_file(\n",
+    "            source_file=intermidiate_path, output_file=outfilepath\n",
+    "        )\n",
+    "\n",
+    "        # --- finished transforms ---\n",
+    "\n",
+    "        print(f\"Created: {out_html_Path}\")\n",
+    "\n",
+    "        webbrowser.open(outfilepath)\n",
+    "\n",
+    "        print(\"Done.\")\n",
+    "\n",
+    "run_xslts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,36 +266,6 @@
     "        # try to overwrite file\n",
     "        with open(file, 'w', encoding='UTF-8') as fi:\n",
     "            fi.writelines(file_lines[root_start:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_date(input_Path: Path) -> str:\n",
-    "    \"\"\"Extract date form input XML from SharePoint\"\"\"\n",
-    "\n",
-    "    with open(input_Path) as f:\n",
-    "        input_xml_str = f.read()\n",
-    "\n",
-    "    # print(f'input_xml_str length is: {len(input_xml_str)}')\n",
-    "    # get the updated date\n",
-    "    match = re.search(r'(<updated>)([A-Z0-9:+-]+)(</updated>)', input_xml_str)\n",
-    "    date_str = ''\n",
-    "    if match:\n",
-    "        date_str = match.group(2)\n",
-    "        print(f'Date extracted from input xml (from SharePoint) {date_str}')\n",
-    "\n",
-    "    try:\n",
-    "        dt = datetime.strptime(date_str[:19], '%Y-%m-%dT%H:%M:%S')\n",
-    "        formated_date = dt.strftime(\"%Y-%m-%d__%H-%M\")\n",
-    "    except Exception as e:\n",
-    "        print(repr(e))\n",
-    "        formated_date = ''\n",
-    "\n",
-    "    return formated_date"
    ]
   },
   {
