--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -21,7 +21,7 @@
     "import saxonche\n",
     "\n",
     "# local imports\n",
-    "from src.supcheck.added_names_report import remove_docstring"
+    "from src.lawchecker.added_names_report import remove_docstring"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "DASHBOARD_DATA_FOLDER = 'Dashboard_Data'\n",
     "\n",
     "# path to folder containing the XSLT files\n",
-    "PARENT_FOLDER = Path(\"/Users/mark/projects/supcheck/\")\n",
+    "PARENT_FOLDER = Path(\"/Users/mark/projects/lawchecker/\")\n",
     "\n",
     "XSL_FOLDER = PARENT_FOLDER / 'XSLT'\n",
     "\n",
@@ -53,7 +53,7 @@
     "XSL_2_PATH = XSL_FOLDER / XSL_2_NAME\n",
     "\n",
     "# WORKING_FOLDER: Optional[Path] = None\n",
-    "WORKING_FOLDER: Optional[Path] = Path(\"/Users/mark/projects/supcheck/_Reports/2024-01-15\")\n"
+    "WORKING_FOLDER: Optional[Path] = Path(\"/Users/mark/projects/lawchecker/_Reports/2024-01-15\")\n"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "def run_xslts():\n",
     "    xsl_1_Path = XSL_1_PATH\n",
     "    xsl_2_Path = XSL_2_PATH\n",
-    "    input_Path = Path(\"/Users/mark/projects/supcheck/_Reports/2023-05-18/Dashboard_Data/2023-05-17__16-22_input_from_SP.xml\")\n",
+    "    input_Path = Path(\"/Users/mark/projects/lawchecker/_Reports/2023-05-18/Dashboard_Data/2023-05-17__16-22_input_from_SP.xml\")\n",
     "    parameter = None\n",
     "\n",
     "    print(f\"{input_Path=}\")\n",
@@ -300,56 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date extracted from input xml (from SharePoint) 2024-01-15T11:10:41Z\n",
-      "dated_folder_Path=PosixPath('/Users/mark/projects/supcheck/_Reports/2024-01-15')\n",
-      "intermidiate_Path=PosixPath('/Users/mark/projects/supcheck/_Reports/2024-01-15/Dashboard_Data/2024-01-15__11-10_intermediate.xml')\n",
-      "out_html_Path=PosixPath('/Users/mark/projects/supcheck/_Reports/2024-01-15/Added_Names_Report.html')\n",
-      "SaxonC-HE 12.3 from Saxonica\n",
-      "intermidiate_path='file:///Users/mark/projects/supcheck/_Reports/2024-01-15/Dashboard_Data/2024-01-15__11-10_intermediate.xml'\n",
-      "\n",
-      "source_file=input_path='file:///Users/mark/projects/supcheck/_Reports/2024-01-15/unfiltered_items_2024-01-15.xml'\n",
-      "output_file=intermidiate_path='file:///Users/mark/projects/supcheck/_Reports/2024-01-15/Dashboard_Data/2024-01-15__11-10_intermediate.xml'\n",
-      "\n",
-      "\n",
-      "\n",
-      " XSLT 2\n",
-      "\n",
-      "source_file=file:///Users/mark/projects/supcheck/_Reports/2024-01-15/Dashboard_Data/2024-01-15__11-10_intermediate.xml,  output_file=file:///Users/mark/projects/supcheck/_Reports/2024-01-15/Added_Names_Report.html,  parameter=None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "false\n",
-      "names-to-add\n",
-      "true\n",
-      "further-names-to-add\n",
-      "further name\n",
-      "further name\n",
-      "$marsh-path: \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_Path=Path(\"/Users/mark/projects/supcheck/_Reports/2024-01-15/unfiltered_items_2024-01-15.xml\")\n",
+    "input_Path=Path(\"/Users/mark/projects/lawchecker/_Reports/2024-01-15/unfiltered_items_2024-01-15.xml\")\n",
     "xsl_1_Path = XSL_1_PATH\n",
     "xsl_2_Path = XSL_2_PATH\n",
-    "# parameter = Path(\"/Users/mark/projects/supcheck/_Reports/2024-01-15/XML_Files\")\n",
+    "# parameter = Path(\"/Users/mark/projects/lawchecker/_Reports/2024-01-15/XML_Files\")\n",
     "parameter = None\n",
     "\n",
     "formated_date = extract_date(input_Path)\n",
@@ -389,7 +347,7 @@
     "    input_path = input_Path.as_uri()\n",
     "    intermidiate_path = intermidiate_Path.as_uri()\n",
     "    print(f'{intermidiate_path=}')\n",
-    "    # intermidiate_path = str(Path('/Users/mark/projects/supcheck/_Reports/2023-05-17/Dashboard Data/intermediate2.xml'))\n",
+    "    # intermidiate_path = str(Path('/Users/mark/projects/lawchecker/_Reports/2023-05-17/Dashboard Data/intermediate2.xml'))\n",
     "    outfilepath = out_html_Path.as_uri()\n",
     "\n",
     "    # --- 1st XSLT ---\n",
@@ -436,91 +394,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n",
-      "non_domestic_rm_cwh_0517.xml\n",
-      "LM bill\n",
-      "procurement_rm_rep_0517.xml\n",
-      "FM bill\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "remove_docstring(Path('/Users/mark/projects/added-names/_Reports/2023-05-17/XML_Files'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      " XSLT 2\n",
-      "\n",
-      "source_file=file:///Users/mark/projects/supcheck/_Reports/2023-06-28/Dashboard_Data/2023-06-28__18-15_intermediate.xml,  output_file=file:///Users/mark/projects/supcheck/_Reports/2023-06-28/Added_Names_Report_new.html,  parameter=/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML\n",
-      "hi\n",
-      "electronic_trade_day_pbc_0619.xml\n",
-      "FM bill\n",
-      "natsecurity_day_cclm_0626_pdf.xml\n",
-      "FM bill\n",
-      "energy_day_pbc_0627.xml\n",
-      "FM bill\n",
-      "strikesminserv_day_cclm_0621.xml\n",
-      "FM bill\n",
-      "victims_prisoners_rm_pbc_0628.xml\n",
-      "FM bill\n",
-      "digitalmarkets_rm_pbc_0628.xml\n",
-      "FM bill\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "$marsh-path: file:///Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML\n",
-      "Error on line 66 column 169 of natsecurity_day_cclm_0626_pdf.xml:\n",
-      "  SXXP0003   Error reported by XML parser: The prefix \"ukl\" for attribute \"ukl:dateFormat\"\n",
-      "  associated with an element type \"ref\" is not bound.: The prefix \"ukl\" for attribute\n",
-      "  \"ukl:dateFormat\" associated with an element type \"ref\" is not bound.\n",
-      "Error on line 41 column 47 of post-processing-html.xsl:\n",
-      "  SXXP0003  collection(): failed to parse XML file\n",
-      "  file:/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML/natsecurity_day_cclm_0626_pdf.xml: org.xml.sax.SAXParseException; systemId: file:/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML/natsecurity_day_cclm_0626_pdf.xml; lineNumber: 66; columnNumber: 169; The prefix \"ukl\" for attribute \"ukl:dateFormat\" associated with an element type \"ref\" is not bound.\n",
-      "  In template rule with match=\"root\" on line 26 of post-processing-html.xsl\n",
-      "     invoked by built-in template rule (text-only)\n"
-     ]
-    },
-    {
-     "ename": "PySaxonApiError",
-     "evalue": "collection(): failed to parse XML file file:/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML/natsecurity_day_cclm_0626_pdf.xml: org.xml.sax.SAXParseException; systemId: file:/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML/natsecurity_day_cclm_0626_pdf.xml; lineNumber: 66; columnNumber: 169; The prefix \"ukl\" for attribute \"ukl:dateFormat\" associated with an element type \"ref\" is not bound.. Line number: -1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPySaxonApiError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 26\u001b[0m\n\u001b[1;32m     22\u001b[0m     param \u001b[38;5;241m=\u001b[39m proc\u001b[38;5;241m.\u001b[39mmake_string_value(parameter_str)\n\u001b[1;32m     24\u001b[0m     executable2\u001b[38;5;241m.\u001b[39mset_parameter(XSLT_MARSHAL_PARAM_NAME, param)\n\u001b[0;32m---> 26\u001b[0m \u001b[43mexecutable2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform_to_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource_file\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mintermidiate_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_file\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moutfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# # --- finished transforms ---\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# print(f'Created: {out_html_Path}')\u001b[39;00m\n\u001b[1;32m     32\u001b[0m webbrowser\u001b[38;5;241m.\u001b[39mopen(outfilepath)\n",
-      "File \u001b[0;32mpython_saxon/saxonc.pyx:1997\u001b[0m, in \u001b[0;36msaxonche.PyXsltExecutable.transform_to_file\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mPySaxonApiError\u001b[0m: collection(): failed to parse XML file file:/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML/natsecurity_day_cclm_0626_pdf.xml: org.xml.sax.SAXParseException; systemId: file:/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML/natsecurity_day_cclm_0626_pdf.xml; lineNumber: 66; columnNumber: 169; The prefix \"ukl\" for attribute \"ukl:dateFormat\" associated with an element type \"ref\" is not bound.. Line number: -1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XSLT 2 only\n",
     "\n",
     "with saxonche.PySaxonProcessor(license=False) as proc:\n",
     "\n",
-    "    intermidiate_path = Path(\"/Users/mark/projects/supcheck/_Reports/2023-06-28/Dashboard_Data/2023-06-28__18-15_intermediate.xml\").as_uri()\n",
-    "    outfilepath = Path(\"/Users/mark/projects/supcheck/_Reports/2023-06-28/Added_Names_Report_new.html\").as_uri()\n",
-    "    parameter = Path(\"/Users/mark/projects/supcheck/_Reports/2023-06-28/Amendment_Paper_XML\")\n",
+    "    intermidiate_path = Path(\"/Users/mark/projects/lawchecker/_Reports/2023-06-28/Dashboard_Data/2023-06-28__18-15_intermediate.xml\").as_uri()\n",
+    "    outfilepath = Path(\"/Users/mark/projects/lawchecker/_Reports/2023-06-28/Added_Names_Report_new.html\").as_uri()\n",
+    "    parameter = Path(\"/Users/mark/projects/lawchecker/_Reports/2023-06-28/Amendment_Paper_XML\")\n",
     "\n",
     "    # --- 2nd XSLT ---\n",
     "    print(\"\\n\\n XSLT 2\\n\")\n",
@@ -549,13 +442,6 @@
     "\n",
     "    print('Done.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
